# qttemplate

./: CMakeLists.txt  CMakePresets.json  Main.qml  main.cpp
CMake/: DefaultCXX.cmake
Pages/: MainContent.qml
Utilities/: CMakeLists.txt  constants.qml
modA/: AudioController.qml  CMakeLists.txt  SubViewTwo.qml  subViewOne.qml  subcontroller.cpp  subcontroller.h
